--- a/style.css
+++ b/style.css
@@ -31,7 +31,20 @@
     -webkit-text-stroke: 1px black;
   }
   
-  #rlist{
-    padding-right: 50px;
-  }
+#rlist{
+  padding-right: 50px;
+}
+v{
+  background-color: aliceblue;
+  padding-left: 40%;
+}
+a{
+  text-decoration: none;
+  color: black;
+
+}
+
+#subnav{
+  padding-left: 5%;
+}
   
